# ##############################################################################
# apps/netutils/mongoose/CMakeLists.txt
#
# Licensed to the Apache Software Foundation (ASF) under one or more contributor
# license agreements.  See the NOTICE file distributed with this work for
# additional information regarding copyright ownership.  The ASF licenses this
# file to you under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License.  You may obtain a copy of
# the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
# License for the specific language governing permissions and limitations under
# the License.
#
# ##############################################################################

if(CONFIG_NETUTILS_MONGOOSE)
  set(MONGOOSE_DIR ${CMAKE_CURRENT_LIST_DIR}/mongoose)

  if(NOT EXISTS ${MONGOOSE_DIR})
    set(MONGOOSE_URL
	https://github.com/cesanta/mongoose/archive/refs/tags)
    set(MONGOOSE_VERSION ${CONFIG_MONGOOSE_VERSION})
    FetchContent_Declare(
      mongoose_fetch
      URL ${MONGOOSE_URL}/${MONGOOSE_VERSION}.zip SOURCE_DIR ${MONGOOSE_DIR}
          BINARY_DIR ${CMAKE_BINARY_DIR}/apps/netutils/mongoose
      DOWNLOAD_NO_PROGRESS true
      TIMEOUT 30)

    FetchContent_GetProperties(mongoose_fetch)

    if(NOT mongoose_fetch_POPULATED)
      FetchContent_Populate(mongoose_fetch)
    endif()
  endif()

  target_include_directories(apps PUBLIC mongoose)
  target_compile_options(apps PRIVATE -DMG_ARCH=MG_ARCH_UNIX -DMG_ENABLE_SSI=1 -DMG_IO_SIZE=512 -DMG_TLS=MG_TLS_NONE)
  target_sources(
    apps
    PRIVATE mongoose/mongoose.c)
endif()
